# SDL2pp

./: .clang-tidy  CMakeLists.txt  Dockerfile  README.md
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake
include/: color.hpp  enums.hpp  event.hpp  init.hpp  renderer.hpp  shapes.hpp  surface.hpp  texture.hpp  util.hpp  window.hpp
include/sdl2/: color.hpp  event.hpp  pixel.hpp  shapes.hpp  util.hpp
include/sdl2++/: color.hpp  enums.hpp  event.hpp  init.hpp  message_box.hpp  pixel.hpp  renderer.hpp  shapes.hpp  surface.hpp  texture.hpp  util.hpp  window.hpp
include/sdl2pp/: color.hpp  init.hpp  message_box.hpp  renderer.hpp  sdl2pp.hpp  shapes.hpp  surface.hpp  util.hpp
src/: event.cpp  message_box.cpp  renderer.cpp  surface.cpp  texture.cpp  window.cpp
test/: CMakeLists.txt
test/src/: test.cpp
